force-app/main/default/objects/Vente__c.object
<CustomObject>
    <fields>
        <fullName>Accreditation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accreditation</label>
        <referenceTo>Accreditation__c</referenceTo>
        <relationshipLabel>Ventes</relationshipLabel>
        <relationshipName>Ventes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Champs1_del__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Champs 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Ventes (Client)</relationshipLabel>
        <relationshipName>Ventes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DateValidation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Validation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateVente__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Vente</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LoginVendeur__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Login Vendeur</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Montant__c</fullName>
        <label>Montant</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>HotelOffersParent</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Partenaire__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Partenaire</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Ventes</relationshipLabel>
        <relationshipName>Hotel_Offers</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Qtt__c</fullName>
        <label>Quantité</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>En Attente</fullName>
                </value>
                <value>
                    <fullName>Validé</fullName>
                </value>
                <value>
                    <fullName>Refusé</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendeur__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendeur</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Ventes</relationshipLabel>
        <relationshipName>HotelOffersContact</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Vente</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>V-{00000}</displayFormat>
        <label>Identifiant Vente</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ventes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>